fix building for Intel XDK

--- a/plugin.xml
+++ b/plugin.xml
@@ -27,10 +27,10 @@
     <license>Apache 2.0</license>
     <keywords>cordova,crashlytics</keywords>
 
-    <engines>
+    <!--engines>
         <engine name="cordova-android" version=">=3.7.0" />
         <engine name="cordova-ios" version=">=3.8.0" />
-    </engines>
+    </engines-->
 
     <preference name="CRASHLYTICS_API_KEY" />
     <preference name="CRASHLYTICS_API_SECRET" />
@@ -57,12 +57,15 @@
         </config-file>
 
         <config-file target="custom_rules.xml" parent="/*">
-            <import file="../../plugins/org.apache.cordova.crashlytics/libs/android/crashlytics_build.xml"/>
+            <import file="./crashlytics_build.xml"/>
         </config-file>
 
         <source-file src="libs/android/crashlytics.jar" target-dir="libs" />
 
         <source-file src="src/android/org/apache/cordova/crashlytics/CrashlyticsPlugin.java" target-dir="src/org/apache/cordova/crashlytics" />
+        <source-file src="libs/android/crashlytics_build.xml" target-dir="./"/>
+        <source-file src="libs/android/crashlytics_build_base.xml" target-dir="./"/>
+        <source-file src="libs/android/crashlytics-devtools.jar" target-dir="./"/>
     </platform>
 
     <!-- ios -->
