--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 	<packaging>jar</packaging>
 
     <properties>
-        <crashlytics.version>1.1.13</crashlytics.version>
+        <crashlytics.version>2.5.5</crashlytics.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>crashlytics-repo</id>
-            <url>http://download.crashlytics.com/maven</url>
+          <id>fabric-repo</id>
+          <url>https://maven.fabric.io/public</url>
         </repository>
         <repository>
             <id>4sh.pubs</id>
@@ -22,10 +22,18 @@
         </repository>
     </repositories>
 
+    <pluginRepositories>
+      <!-- Fabric uses the Crashlytics Maven plugin -->
+      <pluginRepository>
+        <id>crashlytics-plugin-repo</id>
+        <url>http://download.crashlytics.com/maven</url>
+      </pluginRepository>
+    </pluginRepositories>
+
     <build>
         <sourceDirectory>src/android</sourceDirectory>
         <plugins>
-          <plugin>
+          <!--plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.9</version>
@@ -49,6 +57,26 @@
                     </artifactItem>
                   </artifactItems>
                 </configuration>
+              </execution>
+            </executions>
+          </plugin-->
+          <!-- Fabric uses the Crashlytics Maven plugin -->
+          <plugin>
+            <groupId>com.crashlytics</groupId>
+            <artifactId>crashlytics-maven</artifactId>
+            <version>1.12.0</version>
+            <executions>
+              <execution>
+                <id>GenerateResources</id>
+                <goals>
+                  <goal>GenerateResources</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>CleanupResources</id>
+                <goals>
+                  <goal>CleanupResources</goal>
+                </goals>
               </execution>
             </executions>
           </plugin>
@@ -77,9 +105,11 @@
         </dependency>
         <!-- Crashlytics bundled jar -->
         <dependency>
-            <groupId>com.crashlytics.android</groupId>
-            <artifactId>crashlytics</artifactId>
-            <version>${crashlytics.version}</version>
+          <groupId>com.crashlytics.sdk.android</groupId>
+          <artifactId>crashlytics</artifactId>
+          <version>${crashlytics.version}</version>
+          <scope>compile</scope>
+          <type>aar</type>
         </dependency>
     </dependencies>
 
